--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 
 <script src="js/firestore.js"></script>
 <script src="js/auth.js"></script>
+<script src="js/news.js"></script>
+<script src="js/news-store.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
