--- a/register.html
+++ b/register.html
@@ -16,18 +16,18 @@
 </head>
 
 <body>
-  <header>
-  <div class="container">
-    <div href="news.html" class="header-nav">
-      <div class="logo">
-        <a href="news.html"><h1>ВСІ НОВИНИ</h1></a>
-        <a href="news.html"><span> понад 30,000 джерел.</span></a>
-      </div>
+<header>
+    <nav>
+        <div class="container">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">NEWS.PRO</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="login-start.html">Login</a></li>
+      </ul>
     </div>
-    <!-- /.logo -->
-  </div>
-  <!-- /.container -->
-</header>
+    </div>
+  </nav>
+    </header>
 
 <div class="container">
   <div class="row">
