--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="css/news-style.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
+    <header>
+    <nav>
+        <div class="container">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">NEWS.PRO</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="favorite-news.html">Favorite News</a></li>
+        <li><a class="logout">Logout</a></li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+    </header>
 <div class="news-control">
     <div class="container">
-        <button class="waves-effect waves-light btn logout">Exit</button>
         <div class="row">
             <div class="input-field col s6">
                 <select id="country">
