--- a/login-start.html
+++ b/login-start.html
@@ -16,10 +16,17 @@
 <body>
 
 <header>
-  <div class="container">
-    <h2>Тут будет ошибка:</h2>
-  </div>
-</header>
+    <nav>
+        <div class="container">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">NEWS.PRO</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+    </header>
 <div class="container">
     <div class="row">
         <div class="col s12 m8 offset-m2">
